--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,13 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/postgres
 {
-	"name": "Python 3 & PostgreSQL",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// This can be used to network with other containers or the host.
-	// "forwardPorts": [5000, 5432],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip install --user -r requirements.txt",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
-}
+	// 表示名
+	"name": "Django Sample",
+	// docker-compose.ymlでイメージ・コンテナを作成
+	"dockerComposeFile": "../Docker/docker-compose.yml",
+	// VSCodeのワークスペースフォルダ
+	"workspaceFolder": "/workspace",
+	// 使用するサービス
+	"service": "web",
+	// リモート先のVSCodeにインストールする拡張機能
+	// VSCodeを閉じた時、コンテナが自動停止するように指定
+	"shutdownAction": "stopCompose"
+  }
